--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">安卓安卓</string>
     <string name="splash_jump">跳过</string>
+    <string name="percent">%</string>
 
     <!-- menu_main.xml -->
     <string name="setting">设置</string>
